ecmascript/parser/tests/typescript-errors/custom/const-enum/input.ts.stderr
error: Expected Comma, got Some(Word(g))
 --> $DIR/tests/typescript-errors/custom/const-enum/input.ts:3:9
  |
3 |     d = 10
  |         ^^

